* Refactored data model
Signed-off-by: Christian Berger <christian.berger@gu.se>

--- a/code/control/example/man/opendlv-control-example.1
+++ b/code/control/example/man/opendlv-control-example.1
@@ -1,21 +1,21 @@
-.\" Manpage for scaledcars-example
+.\" Manpage for opendlv-example
 .\" Author: Christian Berger <christian.berger@gu.se>.
 
-.TH scaledcars-example 1 "8 October 2016" "0.0.1" "scaledcars-example man page"
+.TH opendlv-example 1 "8 October 2016" "0.0.1" "opendlv-example man page"
 
 .SH NAME
-scaledcars-example \- Example software for scaled cars.
+opendlv-example \- Example software for scaled cars.
 
 
 
 .SH SYNOPSIS
-.B scaledcars-example --cid=<CID>
+.B opendlv-example --cid=<CID>
 
 
 .SH EXAMPLES
 The following command joins the container conference 111:
 
-.B scaledcars-example --cid=111
+.B opendlv-example --cid=111
 
 
 
